make startpage more attractive
by stealing the 3 columns from the other JeffConfs

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -1,32 +1,77 @@
 <div id="home" class="dtc w-100">
   <div class="tc tl-ns">
     <div class="black mw6 mw8-ns tc center ph3 ph0-ns">
-      <h3 class="f2 fw6 tc code" data-lang="Un giorno. Una conferenza. Una community.">One Day. One Track. One Community.</h3>
-      <p>Serverless is a recent addition to the long list of technologies that promise to accelerate software delivery, reduce cost of compute ownership and provide unicorns and rainbows for all. And like all industry buzzwords it generates enthusiasm and scepticism in equal measure – how to move beyond the hype?</p>
+      <h3 class="f2 fw6 tc code" >One Day. One Track. One Community.</h3>
 
-      <p>JeffConf was born in the spirit of Paul Johnston’s <a href="https://serverless.zone/serverless-is-just-a-name-we-could-have-called-it-jeff-1958dd4c63d7">blog post</a>, “Serverless is just a name. We could have called it Jeff”, an attempt to move beyond the Serverless buzzword and focus on the practical use of function as a service platforms and the value they provide. It is a one day, community focused, single track event centred on real world Jeff (or Serverless) based solutions. It’s about fostering a community and helping all of us learn from each other as we embrace a new way of building applications.</p>
+      <p class="mw7-ns center">JeffConf is an attempt to move past the word Serverless, and focus on the use of these platforms and the value they provide.</p>
 
-      <p>JeffConf Hamburg will be the third JeffConf after London and Milan. We extend a warm welcome to attendees from the Hamburg area and beyond! Our focus is on building a community through sharing of experiences, accessible without a large commitment of time or money (tickets start from just €35).</p>
+
     </div>
-    <div>
 
-      <!-- Begin MailChimp Signup Form -->
-      <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
-      <style type="text/css">
+    <div class="cf center dt-ns ph3 ph0-ns">
+      <div class="dt-row-ns">
+
+        <article onclick="changePage('venue')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
+          <img src="/imgs/altonaer-museum-small.jpg" class="db w-100 dim" alt="JeffConf Hamburg 2017 Venue" height="143" />
+          <div class="pa2 ph3-ns pb3-ns hamburg-red-bg flag-bg-container">
+            <h3 class="mb0 mt1">
+              <span class="fw6 f5 f4-ns mv0 white underline-hover" >Venue</span>
+            </h3>
+            <p class="f6 lh-copy measure mt2 white-90" >
+              Altonaer Mueseum Hamburg is a mix of tradition and modernity in Hamburg, and an iconic location to spread cultural ideas.
+            </p>
+          </div>
+        </article>
+
+        <article onclick="changePage('tickets')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
+          <img src="/imgs/food.jpg" class="db w-100 dim" alt="JeffConf Hamburg Tickets" height="143" />
+          <div class="pa2 ph3-ns pb3-ns it-white-bg flag-bg-container bb b--gray">
+            <h3 class="mb0 mt1">
+              <span class="fw6 f5 f4-ns mv0 underline-hover" >Tickets</span>
+            </h3>
+            <p class="f6 lh-copy measure mt2 mid-gray"
+               >
+              Tickets are reasonably priced from €35 to make sure JeffConf Hamburg is financially accessible for the community.
+            </p>
+          </div>
+        </article>
+
+        <article onclick="changePage('speakers')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
+          <img src="/imgs/speakers.jpg" class="db w-100 dim" alt="JeffConf Speakers" height="143" />
+          <div class="pa2 ph3-ns pb3-ns hamburg-red-bg flag-bg-container">
+            <h3 class="mb0 mt1">
+              <span class="fw6 f5 f4-ns mv0 white underline-hover" >Speakers</span>
+            </h3>
+            <p class="f6 lh-copy measure mt2 white-90 no-underline"
+               >
+              Real users showcasing the problems they&#39;ve solved using serverless platforms. Focus is learning through sharing.
+            </p>
+          </div>
+        </article>
+      </div>
+    </div>
+
+    <!-- Begin MailChimp Signup Form -->
+    <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
+    <style type="text/css">
         #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; width:100%;}
      </style>
-      <div id="mc_embed_signup">
-        <form action="https://superluminar.us17.list-manage.com/subscribe/post?u=1850848feb35c80ecb5a4a6b8&amp;id=0fad9cde9b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll">
-            <label for="mce-EMAIL">Stay tuned and subscribe to our newsletter!</label>
-            <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1850848feb35c80ecb5a4a6b8_0fad9cde9b" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-          </div>
-        </form>
-      </div>
-      <!--End mc_embed_signup-->
+    <div id="mc_embed_signup" class="pt4">
+      <form action="https://superluminar.us17.list-manage.com/subscribe/post?u=1850848feb35c80ecb5a4a6b8&amp;id=0fad9cde9b" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll">
+          <label for="mce-EMAIL">Stay tuned and subscribe to our newsletter!</label>
+          <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_1850848feb35c80ecb5a4a6b8_0fad9cde9b" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+        </div>
+      </form>
+    </div>
+    <!--End mc_embed_signup-->
+
+    <div class="black mw6 mw8-ns tc center ph3 ph0-ns">
+      <p class="mw7-ns center">JeffConf was born in the spirit of Paul Johnston’s <a href="https://serverless.zone/serverless-is-just-a-name-we-could-have-called-it-jeff-1958dd4c63d7">blog post</a>, “Serverless is just a name. We could have called it Jeff”, an attempt to move beyond the Serverless buzzword and focus on the practical use of function as a service platforms and the value they provide. It is a one day, community focused, single track event centred on real world Jeff (or Serverless) based solutions. It’s about fostering a community and helping all of us learn from each other as we embrace a new way of building applications.
+      </p>
     </div>
   </div>
 </div>
