Yan Cui is a speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -129,6 +129,38 @@
                 </div>
             </div>
 
+            <div id="yancui" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+                <div class="dt w-100 pv2 bb b--gray">
+                    <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                        <p class="mb0">
+                            Yan Cui
+                        </p>
+                        <p class="f6 gray mt0">
+                            Space Ape Games
+                        </p>
+                        <p class="f6" >
+                            Yan is a polyglot developer and architect, he is a regular speaker at user groups and conferences internationally. Yan is the author of AWS Lambda in Motion, a co-author of F# Deep Dives, and he keeps an active blog at <a href="theburningmonk.com">theburningmonk.com</a> where he shares his thoughts on topics such as AWS, serverless, functional programming and chaos engineering.
+                        </p>
+                        <p class="f6">
+                            Pronouns: he/him
+                        </p>
+                        <div class="tl">
+                            <a class="ph1 no-underline" title="Yan on Twitter" href="https://twitter.com/theburningmonk" target="_blank">@@include('./icon-twitter.html')</a>
+                            <a class="ph1 no-underline" title="Yan on LinkedIn" href="https://www.linkedin.com/in/theburningmonk/" target="_blank">@@include('./icon-linkedin.html')</a>
+
+                        </div>
+
+                    </div>
+
+
+                    <div class="dtc w-20 pa2 pv3 v-mid">
+                        <img src="/imgs/yan-cui.png" class="ba br2 b--transparent grow" alt="Photo of Yan" title="Yan Cui" />
+                    </div>
+
+                </div>
+            </div>
+
+
         </div>
 
 
