fix link to yan cui blog

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -139,7 +139,7 @@
                             Space Ape Games
                         </p>
                         <p class="f6" >
-                            Yan is a polyglot developer and architect, he is a regular speaker at user groups and conferences internationally. Yan is the author of AWS Lambda in Motion, a co-author of F# Deep Dives, and he keeps an active blog at <a href="theburningmonk.com">theburningmonk.com</a> where he shares his thoughts on topics such as AWS, serverless, functional programming and chaos engineering.
+                            Yan is a polyglot developer and architect, he is a regular speaker at user groups and conferences internationally. Yan is the author of AWS Lambda in Motion, a co-author of F# Deep Dives, and he keeps an active blog at <a href="http://theburningmonk.com" target="_blank">theburningmonk.com</a> where he shares his thoughts on topics such as AWS, serverless, functional programming and chaos engineering.
                         </p>
                         <p class="f6">
                             Pronouns: he/him
