added apply button for diversity tickets on diversity page

--- a/src/views/diversity.html
+++ b/src/views/diversity.html
@@ -3,9 +3,16 @@
         <h3 class="black f2 fw6 tc code">Diversity @ JeffConf Hamburg</h3>
         <div class="black mw6 mw7-ns tc center mt4 ph3 ph0-ns">
             <p class="f5 fw4">
-                JeffConf is a community organised event focusing on Serverless technologies and the changing face of application development. We aim to make it an inclusive conference welcoming people from diverse backgrounds. To reach our goal, we are going to allow people who are part of an underrepresented group in tech to obtain a free Diversity Ticket. We will keep you posted!
+                JeffConf is a community organised event focusing on Serverless technologies and the changing face of application development. We aim to make it an inclusive conference welcoming people from diverse backgrounds. To reach our goal, we are going to allow people who are part of an underrepresented group in tech to obtain a free diversity ticket.
             </p>
-
+            <p>
+                If you wish to apply for a diversity ticket simply click the button below.
+            </p>
+            <div class="w-100 center tc mv4">
+                <a id="diversity-apply" href="https://docs.google.com/forms/d/e/1FAIpQLScbvy5OcEw8olWbgJuMi9o_5B8ESU-3BvmJZIhoSqFpT1UNPA/viewform" class="tc mw4 center ph4 pv2 v-mid no-underline it-green-bg white f5 fw6 ba br2 b--transparent pointer" target="_blank">
+                    Apply
+                </a>
+            </div>
             <h4 class="black f2 fw6 tc code">Diversity Partners</h4>
             @@include('./diversity-partners.html')
 
