make diversity button visible

--- a/src/views/diversity.html
+++ b/src/views/diversity.html
@@ -9,7 +9,7 @@
                 If you wish to apply for a diversity ticket simply click the button below.
             </p>
             <div class="w-100 center tc mv4">
-                <a id="diversity-apply" href="https://docs.google.com/forms/d/e/1FAIpQLScbvy5OcEw8olWbgJuMi9o_5B8ESU-3BvmJZIhoSqFpT1UNPA/viewform" class="tc mw4 center ph4 pv2 v-mid no-underline it-green-bg white f5 fw6 ba br2 b--transparent pointer" target="_blank">
+                <a id="diversity-apply" href="https://docs.google.com/forms/d/e/1FAIpQLScbvy5OcEw8olWbgJuMi9o_5B8ESU-3BvmJZIhoSqFpT1UNPA/viewform" class="tc mw4 center ph4 pv2 v-mid no-underline hamburg-red-bg white f5 fw6 ba br2 b--transparent pointer" target="_blank">
                     Apply
                 </a>
             </div>
