show t3n as media partner in footer

--- a/src/views/footer.html
+++ b/src/views/footer.html
@@ -1,6 +1,14 @@
 <footer class="center tc f6">
   <div class="w-100 tc pt3">
 
+      <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" id="Media Partners">Media Partners</h4>
+
+      <div class="w-50-ns center pa3">
+          <a id="t3n-website" class="no-underline pointer db center" href="https://t3n.de" target="_blank" title="t3n">
+              <img class="w-50" src="/imgs/t3n.png" alt="t3n" title="t3n" />
+          </a>
+      </div>
+
       <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" data-lang="Sponsor" id="sponsors">Sponsors</h4>
                           <div class="w-50-ns center pa3">
                               <a id="aws-sponsor-website" class="no-underline pointer db center" href="https://aws.amazon.com" target="_blank" title="Amazon Web Services">
