better image for tickets than heaps of fried chicken wings

--- a/src/views/home.html
+++ b/src/views/home.html
@@ -24,7 +24,7 @@
         </article>
 
         <article onclick="changePage('tickets')" class="dtc-ns black-60 mv1 mv4-ns w-100 w-33-ns mw5 center pointer">
-          <img src="/imgs/food.jpg" class="db w-100 dim" alt="JeffConf Hamburg Tickets" height="143" />
+          <img src="/imgs/tickets.jpg" class="db w-100 dim" alt="JeffConf Hamburg Tickets" height="143" />
           <div class="pa2 ph3-ns pb3-ns it-white-bg flag-bg-container bb b--gray">
             <h3 class="mb0 mt1">
               <span class="fw6 f5 f4-ns mv0 underline-hover" >Tickets</span>
