--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -164,5 +164,37 @@
         </div>
 
 
+        <div id="oliverz" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/oliver-zeigermann.jpg" alt="Photo of Oliver" title="Oliver Zeigermann" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Oliver Zeigermann
+                    </p>
+                    <p class="f6 gray mt0">
+                        floreysoft. embarc, freelancer
+                    </p>
+                    <p class="f6" >
+                        Oliver Zeigermann is a software developer from Hamburg, Germany.
+                        He has developed software in many different languages and technologies
+                        over the past couple of decades, including C, C++, Java, Python, and
+                        JavaScript.<br>
+                        For the past few years he dived into machine learning and data visualization.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tr">
+                        <a class="ph1 no-underline" title="Oliver on Twitter" href="https://twitter.com/DJCordhose" target="_blank">@@include('./icon-twitter.html')</a>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
     </div>
 </div>
