Daniel Buchholz is a confirmed speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -195,6 +195,38 @@
             </div>
         </div>
 
+        <div id="danielb" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Daniel Buchholz
+                    </p>
+                    <p class="f6 gray mt0">
+                        GHX Europe GmbH
+                    </p>
+                    <p class="f6" >
+                        Daniel is a Software Engineering Manager and Cloud Architect for a company supporting the Healthcare Supply Chain of suppliers, providers and distributors in the healthcare sector worldwide. He has spent 15 years in this business, starting as a software engineer. Today he is part of a team defining a new global Catalog Management foundation for the company and also an occasional contributor to local AWS meetups in Dortmund, Germany.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tl">
+                        <a class="ph1 no-underline" title="Daniel on Twitter" href="https://twitter.com/danbdo" target="_blank">@@include('./icon-twitter.html')</a>
+
+                    </div>
+
+                </div>
+
+
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/daniel-buchholz.jpg" class="ba br2 b--transparent grow" alt="Photo of Daniel" title="Daniel Buchholz" />
+                </div>
+
+            </div>
+        </div>
+
 
     </div>
+
+
 </div>
