Phillip Muens is a confirmed speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -225,6 +225,34 @@
             </div>
         </div>
 
+        <div id="philippm" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/philipp-muens.jpg" alt="Photo of Philipp" title="Philipp Müns" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Philipp Müns
+                    </p>
+                    <p class="f6 gray mt0">
+                        Serverless, Inc.
+                    </p>
+                    <p class="f6" >
+                        Philipp Müns is a core developer at Serverless, Inc. He works on the team in charge of building and maintaining the Serverless Framework — an application framework for building web, mobile and IoT applications powered by AWS Lambda, Azure Functions, Google Cloud Functions and more.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tr f6">
+                        <a class="ph1 no-underline" title="Philipp on Twitter" href="https://twitter.com/pmmuens" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Philipp on LinkedIn" href="https://www.linkedin.com/in/pmuens/" target="_blank">@@include('./icon-linkedin.html')</a>
+                        <a href="http://philippmuens.com" target="_blank">philippmuens.com</a>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
 
     </div>
 
