Lars Trieloff is a confirmed speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -254,7 +254,32 @@
             </div>
         </div>
 
-    </div>
+        <div id="larst" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Lars Trieloff
+                    </p>
+                    <p class="f6 gray mt0">
+                        Adobe
+                    </p>
+                    <p class="f6" >
+                        <br><br><br><br>
+                    </p>
+                    <p class="f6">
+                    </p>
+                    <div class="tl">
+                        <a class="ph1 no-underline" title="Lars on Twitter" href="https://twitter.com/trieloff" target="_blank">@@include('./icon-twitter.html')</a>
+
+                    </div>
+
+                </div>
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/lars-trieloff.jpg" class="ba br2 b--transparent grow" alt="Photo of Lars" title="Lars Trieloff" />
+                </div>
+
+            </div>
+        </div>
 
 
 </div>
