Cyle Riggs is a confirmed speaker

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -282,4 +282,34 @@
         </div>
 
 
+        <div id="cyler" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/cyle-riggs.jpg" alt="Photo of Cyle" title="Cyle Riggs" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Cyle Riggs
+                    </p>
+                    <p class="f6 gray mt0">
+                        Container Solutions
+                    </p>
+                    <p class="f6">
+                        Cyle joined Container Solutions in 2017 as a cloud native developer/consultant after spending four years as a developer at AWS. He is focused on the implementation and use cases of modern and postmodern technologies. Outside of his career he is focused on travel and nature.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tr">
+                        <a class="ph1 no-underline" title="Cyle on Twitter" href="https://twitter.com/beardedfoo" target="_blank">@@include('./icon-twitter.html')</a>
+
+                        <a class="ph1 no-underline" title="Cyle on GitHub" href="https://github.com/beardedfoo" target="_blank">@@include('./icon-github.html')</a>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
+
+    </div>
 </div>
