show confirmed talks on agenda page
without the not yet confirmed details like times.

also show speaker names as well from confirmed speakers who have not yet submitted their talk title/abstracts

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -1,10 +1,171 @@
 <div id="agenda" class="dn">
   <div class="tc tl-ns">
       <h3 class="black f2 fw6 tc code">Agenda</h3>
+
       <h2 class="black f3 fw6 tc code">Workshop Day (Feb 15th)</h2>
       <div class="b tc">Details coming soon!</div>
+
       <h2 class="black f3 fw6 tc code">Conference Day (Feb 16th)</h2>
-      <div class="b tc">Details coming soon!</div>
+      <div class="b tc">We will add talks as they get confirmed! Agenda still subject to change!</div>
+
+      <div class="dt ba b--black-50 mw7 center">
+          <div class="dt-row white">
+              <div class="dtc v-mid tc pa3 br bb fw6 hamburg-red-bg w-10">
+                  Time
+              </div>
+              <div class="dtc v-mid tl ph2 pv3 bb fw6 hamburg-red-bg w-20">
+                  Speaker / Activity
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb fw6 hamburg-red-bg w-60">
+                  Description
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Keynote</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Manu Rink
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Alex Casalboni
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Paul Johnston
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Anna Doubková
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Yan Cui
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Serverless in production, an experience report</p>
+                  <p class="f6 fw4">In this talk Yan Cui shares his experience of migrating an existing monolithic architecture for a social network to AWS Lambda, and how it empowered a small team to deliver features quickly and how they address operational concerns such as CI/CD, logging, monitoring and config management.</p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Oliver Zeigermann
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Serverless Machine Learning</p>
+                  <p class="f6 fw4">In this talk I will show how to use a sentiment analysis API to find out which of your emails should be answered first. I will also train and deploy a simple TensorFlow model that predicts the category of a new customer.</p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Daniel Buchholz
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Rule-based dispatching of events to a serverless services armada</p>
+                  <p class="f6 fw4">Some item is changed in some database… Stuff needs to happen as an effect… Tons of downstream services might need a notification.. But which? For each individual item this is a matter of matching the item’s contents against configurable, even volatile, rules. How we make it happen.</p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Philipp Müns
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Lars Trieloff
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f6 fw4"></p>
+              </div>
+          </div>
+
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Cyle Riggs
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Live Coding: A Serverless Platform in 100 lines</p>
+                  <p class="f6 fw4">I will build and demonstrate a working serverless platform, without using any existing serverless framework, live on stage. In implementing FaaS I will demonstrate the core components, features, and challenges of architecting and using various serverless platforms.</p>
+              </div>
+          </div>
+
+      </div>
+
 
   </div>
 </div>
