Add title of Larsens talk, description still todo

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -146,7 +146,7 @@
                   Lars Trieloff
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
-                  <p class="f5 fw6 v-mid">TBA</p>
+                  <p class="f5 fw6 v-mid">Putting the F in FaaS: Functional Composition in a Serverless World</p>
                   <p class="f6 fw4"></p>
               </div>
           </div>
