Simon Warley is a confirmed speaker.

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -26,7 +26,7 @@
                   TBA
               </div>
               <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
-                  TBA
+                  Simon Wardley
               </div>
               <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
                   <p class="f5 fw6 v-mid">Keynote</p>
