--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -308,6 +308,39 @@
             </div>
         </div>
 
+        <div id="simonw" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Simon Wardley
+                    </p>
+                    <p class="f6 gray mt0">
+                        Leading Edge Forum
+                    </p>
+                    <p class="f6">
+                        Simon Wardley is a Researcher for Leading Edge Forum, a global research and thought leadership programme dedicated to helping large organizations reimagine their organizations and leadership for a technology-driven future. Simon is also lead practitioner for LEFs Wardley Maps Advisory service which helps client anticipate market and ecosystem developments so they know where to go and why.
+                    </p>
+                    <p class="f6">
+                        Simon&#39s focus is on strategic play both at an industrial and global level. He is the author of multiple reports including Clash of the Titans: Can China Dethrone Silicon Valley?, a pioneer in the use of topographical intelligence within business, a former executive and an advisory board member for several successful start-ups. He has twice been voted as one of the UK&#39s top 50 most influential people in technology. Simon has spent the last 20 years defining future strategies for companies in the FMCG, Retail and Technology industries. He is a passionate advocate in the fields of strategic play, organizational structure, open source and leadership and is a regular presenter at conferences worldwide.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+
+                    <div class="tl">
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="http://blog.gardeviance.org/" target="_blank">http://blog.gardeviance.org/</a>
+
+                        <a class="ph1 no-underline" title="Simon on Twitter" href="https://twitter.com/swardley" target="_blank">@@include('./icon-twitter.html')</a>
+                        <a class="ph1 no-underline" title="Simon on Medium" href="https://medium.com/@swardley" target="_blank">@@include('./icon-medium.html')</a>
+                    </div>
+
+                </div>
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/simon-wardley.jpg" class="ba br2 b--transparent grow" alt="Photo of Simon" title="Simon Wardley" />
+                </div>
+
+            </div>
+        </div>
 
     </div>
 </div>
