--- a/src/views/index.html
+++ b/src/views/index.html
@@ -111,6 +111,7 @@
       @@include('./coc.html')
       @@include('./imprint.html')
       @@include('./tickets.html')
+      @@include('./about.html')
     </div>
 
     @@include('./footer.html')
