Don't repeat 'event' in a sentence.

--- a/src/views/about.html
+++ b/src/views/about.html
@@ -5,7 +5,7 @@
         <div class="black mw6 tc center">
             <p>
                 <h4 class="black f3 fw6 tc code mt5 mb3 mb0-ns" id="Conference finance">Conference finance</h4>
-                    Our motivation for creating JeffConf Hamburg isn't money. In the event that the event is profitable we will put the money back into the community and/or towards the next JeffConf Hamburg. We're committed to financial transparency and will publish the conference accounts on this page once they are finalised.
+                    Our motivation for creating JeffConf Hamburg isn't money. In the event that the conference is profitable we will put the money back into the community and/or towards the next JeffConf Hamburg. We're committed to financial transparency and will publish the conference accounts on this page once they are finalised.
             </p>
         </div>
     </div>
