Subbu Allamaraju is a confirmed JeffConf Hamburg speaker.

--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -342,5 +342,33 @@
             </div>
         </div>
 
+        <div id="subbua" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/subbu-allamaraju.jpg" alt="Photo of Subbu" title="Subbu Allamaraju" class="grow"/>
+                </div>
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Subbu Allamaraju
+                    </p>
+                    <p class="f6 gray mt0">
+                        Expedia Inc
+                    </p>
+                    <p class="f6">
+                        Subbu Allamaraju is a Vice President of technology at Expedia Inc. and has been involved in cloud, devOps, and operations for a number of years. He is currently leading Expedia's cloud migration from data centers to public cloud. Prior to joining Expedia, lead eBay's private cloud efforts making eBay one of the largest operators of OpenStack. He is an occasional speaker and blogger. You can follow him on Twitter @sallamar, and his blog at <a href="https://subbu.org">https://subbu.org</a>.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+                    <div class="tr">
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="https://subbu.org" target="_blank">subbu.org</a>
+                        <a class="ph1 no-underline" title="Subbu on Twitter" href="https://twitter.com/sallamar" target="_blank">@@include('./icon-twitter.html')</a>
+
+                    </div>
+
+                </div>
+            </div>
+        </div>
+
     </div>
 </div>
