--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -164,6 +164,18 @@
               </div>
           </div>
 
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Subbu Allamaraju
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">How to sell serverless to your colleagues</p>
+              </div>
+          </div>
+
       </div>
 
 
