Michael Wittig is a confirmed JeffConf Hamburg Speaker

--- a/src/views/agenda.html
+++ b/src/views/agenda.html
@@ -176,6 +176,19 @@
               </div>
           </div>
 
+          <div class="dt-row bg-near-white">
+              <div class="dtc v-mid tc pa3 br bb b--black-50">
+                  TBA
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bb b--black-50">
+                  Michael Wittig
+              </div>
+              <div class="dtc v-mid tl ph3 pv3 bl bb b--black-50">
+                  <p class="f5 fw6 v-mid">Evolutionary Serverless Architecture: From hackathon to product</p>
+                  <p class="f6 fw4">A system architecture often struggles to adapt to new requirements. Serverless architectures can evolve over time because we can replace the building blocks at any time.</p>
+              </div>
+          </div>
+
       </div>
 
 
