--- a/src/views/speakers.html
+++ b/src/views/speakers.html
@@ -370,5 +370,34 @@
             </div>
         </div>
 
+        <div id="michaelw" class="dt-row bb b--light-gray w-100 mt1 mt3-ns">
+            <div class="dt w-100 pv2 bb b--gray">
+                <div class="dtc f4 w-80 pa2 pb0 tl nested-copy-line-height v-top">
+                    <p class="mb0">
+                        Michael Wittig
+                    </p>
+                    <p class="f6 gray mt0">
+                        cloudonaut.io
+                    </p>
+                    <p class="f6">
+                        Michael Wittig is author of Amazon Web Services in Action (Manning). As an independent consultant, he helps his clients to gain value from Amazon Web Services. As a software engineer he develops cloud-native real-time web and mobile applications. He migrated the complete IT infrastructure of the first bank in Germany to AWS. He has expertise in distributed system development and architecture, with experience in algorithmic trading and real-time analytics.
+                    </p>
+                    <p class="f6">
+                        Pronouns: he/him
+                    </p>
+
+                    <div class="tl">
+                        <a class="no-underline orange f6 fw1 ph1 v-top" href="https://cloudonaut.io/" target="_blank">cloudonaut.io</a>
+
+                        <a class="ph1 no-underline" title="Simon on Twitter" href="https://twitter.com/hellomichibye" target="_blank">@@include('./icon-twitter.html')</a>
+                    </div>
+
+                </div>
+                <div class="dtc w-20 pa2 pv3 v-mid">
+                    <img src="/imgs/michael-wittig.jpg" class="ba br2 b--transparent grow" alt="Photo of Michael" title="Michael Wittig" />
+                </div>
+
+            </div>
+        </div>
     </div>
 </div>
